--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
 ---
 services:
   api: &api-environment
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.api
-      args:
-        APP_VERSION: "local-test-1.0.0"
+    image: jhumanj/opnform-api:latest
     container_name: opnform-api
     volumes: &api-environment-volumes
       - opnform_storage:/usr/share/nginx/html/storage:rw
@@ -66,11 +62,7 @@ services:
       start_period: 70s # Allow time for first scheduled run and cache write
 
   ui:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.client
-      args:
-        APP_VERSION: "local-test-1.0.0"
+    image: jhumanj/opnform-client:latest
     container_name: opnform-client
     env_file:
       - ./client/.env
