--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/clarity": "^1.2.1",
     "@iconify-json/ic": "^1.2.1",
     "@iconify-json/octicon": "^1.2.1",
+    "@iconify-json/tabler": "^1.2.1",
     "@nuxt/eslint-config": "^1.3.0",
     "@nuxt/icon": "^1.12.0",
     "@nuxtjs/i18n": "^9.0.0",
