--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-vue": "^10.1.0",
     "nuxt": "^3.17.1",
     "nuxt-utm": "^0.2.2",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "sass": "^1.80.2",
     "vue": "^3.5.13",
@@ -38,13 +38,14 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@iconify-json/material-symbols": "^1.2.4",
-    "@nuxt/ui": "^2.19.2",
+    "@nuxt/ui": "^3.1.3",
     "@pinia/nuxt": "^0.11.0",
     "@popperjs/core": "^2.11.8",
     "@sentry/nuxt": "^9.8.0",
     "@sentry/vite-plugin": "^3.2.2",
     "@sentry/vue": "^9.8.0",
     "@stripe/stripe-js": "^5.5.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@vueuse/components": "^11.2.0",
     "@vueuse/core": "^13.1.0",
     "@vueuse/integrations": "^11.2.0",
@@ -69,6 +70,7 @@
     "query-builder-vue-3": "^1.0.1",
     "quill": "^2.0.2",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^4.1.10",
     "tinymotion": "^0.2.0",
     "v-calendar": "3.0.1",
     "vue-chartjs": "^5.3.2",
