Update ui healthcheck to use curl

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
     env_file:
       - ./client/.env
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://localhost:3000/login || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/login || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
