--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@iconify-json/clarity": "^1.2.1",
+    "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ic": "^1.2.1",
     "@iconify-json/octicon": "^1.2.1",
     "@iconify-json/tabler": "^1.2.1",
