feat: Update Front-End Rules and Refactor User Settings Modal
- Enhanced the front-end rules documentation by adding sections for Code Style, Naming Conventions, Syntax and Formatting, UI and Styling, and Auto-imports to improve clarity and maintainability.
- Refactored the `UserSettingsModal` component to use `LazyUsersSettingsModal` for improved performance and user experience.
- Updated the `app.vue` and `UserDropdown.vue` components to reflect the changes in the modal implementation, ensuring consistent modal behavior across the application.
- Adjusted the `package.json` scripts to optimize build and development processes by increasing memory allocation.
- Removed deprecated settings components such as `AccessTokensSettings.vue`, `AccountSettings.vue`, `BillingSettings.vue`, `ConnectionsSettings.vue`, `SecuritySettings.vue`, and `UserSettingsModal.vue` to streamline the codebase.

These changes aim to enhance the overall user experience, improve code maintainability, and ensure adherence to updated front-end guidelines.

--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev",
+    "build": "NODE_OPTIONS='--max-old-space-size=8192' nuxt build",
+    "dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; NODE_OPTIONS='--max-old-space-size=8192' nuxt dev",
     "docker-dev": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt dev --host 0.0.0.0",
     "generate": "export NODE_TLS_REJECT_UNAUTHORIZED=0; nuxt generate",
     "preview": "nuxt preview",
