feat: Refactor Subscription and UI Components for Enhanced User Experience
- Updated the `SubscriptionController` to include user metadata when creating a Stripe customer, improving user tracking and management.
- Refactored `app.vue` to replace the `UApp` component with `AppProvider`, enhancing the structure and readability of the application layout.
- Introduced `AppSettings` and `AppProvider` components to streamline settings management and improve modularity.
- Updated various components to utilize the new `AppProvider`, ensuring consistent behavior and styling across the application.
- Adjusted the `UserDropdown` and `Admin` routes for better navigation and user experience.

These changes aim to enhance the overall user experience by improving component structure, ensuring better data management, and providing a more cohesive application layout.

--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "@vueuse/integrations": "^11.2.0",
     "@vueuse/motion": "^2.2.6",
     "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/router": "^13.4.0",
     "@zxing/library": "^0.21.3",
     "amplitude-js": "^8.21.9",
     "chart.js": "^4.4.5",
