--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/query-devtools": "^5.81.2",
     "@tanstack/vue-query": "^5.81.5",
+    "@tanstack/vue-query-devtools": "^5.81.5",
     "@vueuse/components": "^11.2.0",
     "@vueuse/core": "^13.1.0",
     "@vueuse/integrations": "^11.2.0",
