Update npm install command in GitHub Actions workflow to remove legacy peer dependencies flag
- Modified the npm install command in `.github/workflows/laravel.yml` to remove the `--legacy-peer-deps` flag, simplifying the installation process.
- This change aims to align with the latest npm practices and ensure a cleaner dependency installation, potentially reducing issues related to outdated peer dependencies.

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -74,7 +74,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install npm dependencies
-        run: npm ci --no-audit --no-progress --silent --legacy-peer-deps
+        run: npm install --no-audit --no-progress --silent
 
       - name: Run ESLint
         run: npm run lint
@@ -220,7 +220,7 @@ jobs:
         run: cp .env.example .env
 
       - name: Install npm dependencies
-        run: npm ci --no-audit --no-progress --silent --legacy-peer-deps
+        run: npm install --no-audit --no-progress --silent
 
       - name: Build client
         run: npm run build
