Update Node.js version and npm install command in GitHub Actions workflow
- Changed the Node.js version in `.github/workflows/laravel.yml` from `20` to `22.17.0` to ensure compatibility with the latest features and improvements.
- Updated the npm install command from `npm install` to `npm ci` for more reliable and faster installations in CI environments, aligning with best practices for dependency management.

These changes aim to enhance the CI/CD pipeline's reliability and performance by utilizing the latest Node.js version and optimizing the installation process.

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22.17.0"
 
       - uses: actions/cache@v4
         with:
@@ -74,7 +74,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install npm dependencies
-        run: npm install --no-audit --no-progress --silent
+        run: npm ci --no-audit --no-progress --silent
 
       - name: Run ESLint
         run: npm run lint
@@ -207,7 +207,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22.17.0"
 
       - uses: actions/cache@v4
         with:
@@ -220,7 +220,7 @@ jobs:
         run: cp .env.example .env
 
       - name: Install npm dependencies
-        run: npm install --no-audit --no-progress --silent
+        run: npm ci --no-audit --no-progress --silent
 
       - name: Build client
         run: npm run build
