Add logging for user block/unblock actions

--- a/api/.env.example
+++ b/api/.env.example
@@ -99,3 +99,6 @@ ZAPIER_ENABLED=false
 STRIPE_CLIENT_ID=
 STRIPE_CLIENT_SECRET=
 STRIPE_REDIRECT_URI=http://localhost:3000/connections/callback/stripe
+
+LOG_SLACK_WEBHOOK_URL=
+LOG_SLACK_CHURN_WEBHOOK_URL=
