--- a/docker/Dockerfile.client
+++ b/docker/Dockerfile.client
@@ -1,4 +1,4 @@
-FROM node:20-alpine AS javascript-builder
+FROM node:24-alpine AS javascript-builder
 WORKDIR /app
 
 # It's best to add as few files as possible before running the build commands
@@ -16,21 +16,30 @@ RUN npm cache clean --force && \
     rm -rf node_modules && \
     npm ci
 
+# Clean up after npm install to free memory
+RUN npm cache clean --force
+
 # Explicitly install the correct version of esbuild
 # RUN npm install esbuild@0.21.5
 
 ADD ./client/ /app/
 
-# Optimize memory usage during build
-ENV NODE_OPTIONS="--max-old-space-size=4096"
+ENV NODE_OPTIONS="--max-old-space-size=6144"
 # Set production mode to reduce memory usage
 ENV NODE_ENV=production
 # Disable source maps to reduce memory usage
 ENV GENERATE_SOURCEMAP=false
-# Run the build
-RUN npm run build
+# Additional memory optimizations
+ENV NUXT_TELEMETRY_DISABLED=1
+# Optimize Vite build for memory
+ENV VITE_NODE_OPTIONS="--max-old-space-size=10240"
+# Run the build with additional memory optimizations and limited concurrency
+RUN --mount=type=tmpfs,target=/tmp \
+    NODE_OPTIONS="--max-old-space-size=10240" \
+    NUXT_BUILD_CONCURRENCY=1 \
+    npm run build
 
-FROM node:20-alpine
+FROM node:24-alpine
 WORKDIR /app
 COPY --from=javascript-builder /app/.output/ /app/
 RUN ls /app/
