--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,8 @@ services:
       <<: *api-env
       APP_ENV: production
     healthcheck:
-      test: ["CMD-SHELL", "pgrep -f 'php artisan queue:work' > /dev/null || exit 1"]
+      test:
+        ["CMD-SHELL", "pgrep -f 'php artisan queue:work' > /dev/null || exit 1"]
       interval: 60s
       timeout: 10s
       retries: 3
@@ -55,7 +56,11 @@ services:
       <<: *api-env
       APP_ENV: production
     healthcheck:
-      test: ["CMD-SHELL", "php /usr/share/nginx/html/artisan app:scheduler-status --mode=check --max-minutes=3 || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "php /usr/share/nginx/html/artisan app:scheduler-status --mode=check --max-minutes=3 || exit 1",
+        ]
       interval: 60s
       timeout: 30s
       retries: 3
@@ -67,7 +72,8 @@ services:
     env_file:
       - ./client/.env
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://localhost:3000/login || exit 1"]
+      test:
+        ["CMD-SHELL", "wget --spider -q http://localhost:3000/login || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -76,6 +82,8 @@ services:
   redis:
     image: redis:7
     container_name: opnform-redis
+    volumes:
+      - redis-data:/data
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
       interval: 30s
@@ -119,3 +127,4 @@ services:
 volumes:
   postgres-data:
   opnform_storage:
+  redis-data:
