--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -1,8 +1,3 @@
-map $original_uri $api_uri {
-    ~^/api(/.*$) $1;
-    default $original_uri;
-}
-
 server {
     listen 80;
     server_name localhost;
@@ -14,43 +9,26 @@ server {
 
     index index.html index.htm index.php;
 
-    # Frontend proxy
+    # Handle static files directly
+    location ~* \.(css|js|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Handle API routes and other backend paths
     location / {
-        proxy_http_version 1.1;
-        proxy_pass http://ui:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
-
-    # HMR websocket support
-    location /_nuxt {
-        proxy_pass http://ui:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # API handling
-    location ~/(api|open|local\/temp|forms\/assets)/ {
-        set $original_uri $uri;
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    # PHP-FPM processing
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass api:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
-        fastcgi_param REQUEST_URI $api_uri;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_read_timeout 300;
     }
 
