Better self-hosted onboarding (#821)
* WIP

* Fix local development

* Refactoring feature flags

* Rely on useState for featureflags

* Clean console log

* Remove nuxt devtools plugin

* Clean comment

* Remove console log statements from feature flags plugin for cleaner output

* Remove unused imports in Kernel.php and ProfileController.php for cleaner code

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,9 +9,16 @@ services:
       - /usr/share/nginx/html/vendor # Exclude vendor directory from the mount
       - ./api/storage:/usr/share/nginx/html/storage:delegated
     environment:
+      # Core Laravel settings
       APP_ENV: local
-      APP_DEBUG: true
-      APP_DEV_CORS: true
+      APP_DEBUG: "true"
+      APP_DEV_CORS: "true"
+      APP_URL: http://localhost
+      FRONT_URL: http://localhost:3000
+      APP_KEY: base64:dD8AFEB45nKZ0VWmIPiW495rDYb+ywRJnCCSdycw0pI=
+      JWT_SECRET: 38hjE96gYu4ceKSSHNnzgeynMr2m3WkNBN2u7zzpVeiITtxFEloxAjcr7TCKuiiy
+      # Self-hosted configuration
+      SELF_HOSTED: "true"
       # Database settings
       DB_HOST: db
       DB_DATABASE: ${DB_DATABASE:-forge}
@@ -25,6 +32,10 @@ services:
       # Storage settings
       FILESYSTEM_DISK: local
       LOCAL_FILESYSTEM_VISIBILITY: public
+      # Mail settings (development - uses log driver)
+      MAIL_MAILER: log
+      MAIL_FROM_ADDRESS: dev@localhost
+      MAIL_FROM_NAME: OpnForm-Dev
       # PHP Configuration
       PHP_MEMORY_LIMIT: "1G"
       PHP_MAX_EXECUTION_TIME: "600"
@@ -34,8 +45,6 @@ services:
       PHP_IDE_CONFIG: serverName=Docker
       XDEBUG_MODE: ${XDEBUG_MODE:-off}
       XDEBUG_CONFIG: client_host=host.docker.internal
-      APP_URL: http://localhost
-      FRONT_URL: http://localhost:3000
     depends_on:
       db:
         condition: service_healthy
@@ -43,28 +52,27 @@ services:
   ui:
     image: jhumanj/opnform-client:dev
     container_name: opnform-client
-    command: sh -c "npm install && NITRO_HOST=0.0.0.0 NITRO_PORT=3000 npm run dev"
+    command: sh -c "
+      if [ ! -f node_modules/.install-complete ] || [ package.json -nt node_modules/.install-complete ]; then
+      echo 'Installing dependencies...';
+      npm install && touch node_modules/.install-complete;
+      else
+      echo 'Dependencies up to date, skipping install';
+      fi && npm run docker-dev"
     volumes:
       - ./client:/app:delegated
-      - /app/node_modules # Keep container's node_modules
+      - client_node_modules:/app/node_modules # Named volume for persistence
     environment:
       NODE_ENV: development
       NUXT_PUBLIC_APP_ENV: development
-      HOST: "0.0.0.0"
-      PORT: 3000
-      # HMR settings
-      CHOKIDAR_USEPOLLING: "true"
-      WATCHPACK_POLLING: "true"
-      VITE_HMR_HOST: "localhost"
-      VITE_HMR_PORT: 24678
-      # API settings
-      NUXT_PUBLIC_APP_URL_BASE: "http://localhost"
-      NUXT_PUBLIC_API_BASE: "http://localhost/api"
+      NUXT_PUBLIC_APP_URL: "http://localhost:3000"
+      NUXT_PUBLIC_API_BASE: "http://localhost"
+      NUXT_PRIVATE_API_BASE: "http://opnform-ingress"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     ports:
-      - "3000:3000"      # Main dev server
-      - "24678:24678"    # Vite HMR port
+      - "3000:3000" # Main dev server
+      - "24678:24678" # Vite HMR port
 
   db:
     image: postgres:16
@@ -101,4 +109,5 @@ services:
         condition: service_started
 
 volumes:
-  postgres-data: 
+  postgres-data:
+  client_node_modules:
