Add Slack logging functionality with custom handlers and services
- Introduced `SlackLoggerFactory` and `SlackLogHandler` classes to facilitate logging to Slack using the JoliCode Slack API. This includes the ability to customize the channel, username, and emoji for messages.
- Created a `SlackLogger` service to provide a simple interface for logging messages to specific Slack channels, enhancing the logging capabilities of the application.
- Updated the `UserActionService` to utilize the new `SlackLogger` for logging security events when users are blocked, improving monitoring and response to user actions.
- Configured custom Slack channels in the logging configuration to support different logging contexts, ensuring better organization and clarity in log messages.

These changes aim to enhance the application's logging infrastructure by integrating with Slack, providing real-time notifications for important events and actions.

--- a/api/composer.json
+++ b/api/composer.json
@@ -20,6 +20,7 @@
         "giggsey/libphonenumber-for-php": "*",
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "*",
+        "jolicode/slack-php-api": "^4.8",
         "laravel/cashier": "*",
         "laravel/framework": "^11.9",
         "laravel/horizon": "*",
