Refactor Slack logging implementation and update configuration
- Removed unused Slack logging channels from the logging configuration, streamlining the setup.
- Introduced a new `SLACK_BOT_TOKEN` environment variable for enhanced security logging.
- Updated `SlackLogger` to log security events with improved context and actions.
- Refactored `SlackLogHandler` to simplify message formatting and removed unnecessary blocks.
- Adjusted `UserActionService` and `FormSpamService` to utilize the updated `SlackLogger` for logging user actions and form reviews.

These changes aim to enhance the logging infrastructure by improving the clarity and security of log messages sent to Slack.

--- a/api/.env.example
+++ b/api/.env.example
@@ -100,5 +100,4 @@ STRIPE_CLIENT_ID=
 STRIPE_CLIENT_SECRET=
 STRIPE_REDIRECT_URI=http://localhost:3000/connections/callback/stripe
 
-LOG_SLACK_WEBHOOK_URL=
-LOG_SLACK_CHURN_WEBHOOK_URL=
+SLACK_BOT_TOKEN=
