Remove Laravel CI/CD workflow configuration
- Deleted the `laravel.yml` workflow file from the GitHub Actions directory. This change removes the existing CI/CD pipeline for Laravel, which included jobs for code linting, testing, and deployment.
- The removal of this file may be part of a transition to a different CI/CD strategy or framework, streamlining the workflow management for the project.

This change aims to simplify the repository by eliminating unused or outdated CI/CD configurations.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: laravel
+name: CI/CD Pipeline
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
       - "client/**"
       - "docker/**"
       - "docker-compose*.yml"
-      - ".github/workflows/laravel.yml"
+      - ".github/workflows/ci-cd.yml"
   pull_request:
   workflow_dispatch:
 
