Enhance application with Clarity integration
- Updated `.env.example` to include `NUXT_PUBLIC_CLARITY_PROJECT_ID` for Clarity configuration.
- Added `Clarity` component to `app.vue` for initializing Clarity tracking.
- Introduced `Clarity.vue` component to manage Clarity's user identification and initialization based on authentication state.
- Updated `runtimeConfig.js` to include `clarityProjectId` from environment variables.

These changes aim to improve user tracking and analytics capabilities within the application.

--- a/client/.env.example
+++ b/client/.env.example
@@ -9,3 +9,4 @@ NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
 NUXT_PUBLIC_RE_CAPTCHA_SITE_KEY=
 NUXT_API_SECRET=secret
 NUXT_PUBLIC_ROOT_REDIRECT_URL=
+NUXT_PUBLIC_CLARITY_PROJECT_ID=
