--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@iconify-json/material-symbols": "^1.2.4",
+    "@microsoft/clarity": "^1.0.0",
     "@nuxt/ui": "^3.2.0",
     "@pinia/nuxt": "^0.11.0",
     "@popperjs/core": "^2.11.8",
@@ -72,7 +73,6 @@
     "pinia": "^3.0.2",
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.4",
-
     "quill": "^2.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^4.1.10",
