--- a/api/.env.example
+++ b/api/.env.example
@@ -20,7 +20,7 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-FILESYSTEM_DRIVER=s3
+FILESYSTEM_DRIVER=local
 
 BROADCAST_CONNECTION=log
 CACHE_STORE=file
