--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@iconify-json/material-symbols": "^1.2.4",
+    "@microsoft/clarity": "^1.0.0",
     "@nuxt/ui": "^3.2.0",
     "@pinia/nuxt": "^0.11.0",
     "@popperjs/core": "^2.11.8",
