Refactor draggable components to use VueDraggable from vue-draggable-plus
- Replaced instances of `draggable` from `vuedraggable` with `VueDraggable` from `vue-draggable-plus` across multiple components, including `OpenForm.vue`, `FormFieldsEditor.vue`, `AddFormBlock.vue`, and `TableColumnManager.vue`.
- Updated event handling for drag-and-drop actions to align with the new component's API, enhancing the overall drag-and-drop functionality within forms and tables.

These changes aim to improve performance and maintainability by standardizing the draggable implementation across the application.

--- a/client/package.json
+++ b/client/package.json
@@ -83,11 +83,11 @@
     "vue-codemirror": "^6.1.1",
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
+    "vue-draggable-plus": "^0.5.6",
     "vue-json-pretty": "^2.4.0",
     "vue-notion": "^3.0.0",
     "vue-signature-pad": "^3.0.2",
     "vue-stripe-js": "^1.0.4",
-    "vuedraggable": "next",
     "webcam-easy": "^1.1.1"
   },
   "eslintIgnore": [
