Enhance Docker Compose configuration and refactor feature flag fetching
- Updated `docker-compose.dev.yml` to ensure the UI service waits for the API service to start before launching.
- Modified `docker-compose.yml` to change the dependency condition for the UI service to wait for the API service to be healthy.
- Refactored feature flag fetching in both `feature-flags.client.js` and `feature-flags.server.js` to utilize the `contentApi` for improved data retrieval and consistency.

These changes aim to enhance service dependencies and improve the reliability of feature flag management in the application.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -52,6 +52,9 @@ services:
   ui:
     image: jhumanj/opnform-client:dev
     container_name: opnform-client
+    depends_on:
+      api:
+        condition: service_started
     command: sh -c "
       if [ ! -f node_modules/.install-complete ] || [ package.json -nt node_modules/.install-complete ]; then
       echo 'Installing dependencies...';
