--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,9 @@ services:
     container_name: opnform-client
     env_file:
       - ./client/.env
+    depends_on:
+      api:
+        condition: service_healthy
     healthcheck:
       test:
         ["CMD-SHELL", "wget --spider -q http://localhost:3000/login || exit 1"]
