--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "crisp-sdk-web": "^1.0.25",
     "date-fns": "^2.30.0",
     "debounce": "^1.2.1",
+    "embedkit": "^0.1.7",
     "esbuild": "^0.23.1",
     "fuse.js": "^7.0.0",
     "js-sha256": "^0.10.1",
