--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/clarity": "^1.2.1",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ic": "^1.2.1",
+    "@iconify-json/ix": "^1.2.10",
     "@iconify-json/octicon": "^1.2.1",
     "@iconify-json/tabler": "^1.2.1",
     "@nuxt/eslint-config": "^1.3.0",
