Enhance CI/CD workflow and testing capabilities
- Added a step to the CI/CD workflow to run front-end tests using Vitest, improving the testing process and ensuring code quality.
- Updated `nuxt.config.ts` to conditionally disable certain modules and plugins during testing, enhancing test isolation and performance.
- Updated `package.json` and `package-lock.json` to include new dependencies for testing, such as `@nuxt/test-utils`, `@vitest/ui`, and `@vue/test-utils`, ensuring the environment is properly set up for testing.

These changes aim to improve the testing framework and streamline the CI/CD process, enhancing overall code reliability and maintainability.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,7 +61,7 @@ jobs:
 
   client_lint:
     runs-on: ubuntu-latest
-    name: Run client linters
+    name: Run client linters + tests
     defaults:
       run:
         working-directory: ./client
@@ -87,6 +87,9 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+      - name: Run front-end tests
+        run: npm run test -- --run
 
   tests:
     runs-on: ubuntu-latest
