--- a/integrations/n8n/package.json
+++ b/integrations/n8n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-opnform",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "n8n community node to receive OpnForm submissions via webhook subscription",
   "keywords": [
     "n8n-community-node-package",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/opnform/opnform.git"
+    "url": "git+https://github.com/jhumanj/opnform.git"
   },
   "main": "dist/index.js",
   "files": [
