Update n8n integration package.json with author email and repository details
- Added email for the author in the package.json file.
- Specified the directory for the repository in the package.json.
- Included a bugs URL for issue tracking in the package.json.

These changes enhance the metadata for the n8n integration, improving clarity and support for users.

--- a/integrations/n8n/package.json
+++ b/integrations/n8n/package.json
@@ -12,11 +12,16 @@
   "license": "MIT",
   "homepage": "https://opnform.com",
   "author": {
-    "name": "OpnForm"
+    "name": "OpnForm",
+    "email": "julien@nahum.net"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jhumanj/opnform.git"
+    "url": "git+https://github.com/jhumanj/opnform.git",
+    "directory": "integrations/n8n"
+  },
+  "bugs": {
+    "url": "https://github.com/jhumanj/opnform/issues"
   },
   "main": "dist/index.js",
   "files": [
