--- a/integrations/n8n/package.json
+++ b/integrations/n8n/package.json
@@ -50,6 +50,7 @@
     "build:watch": "tsc --watch",
     "dev": "n8n-node dev",
     "lint": "n8n-node lint",
-    "lint:fix": "n8n-node lint --fix"
+    "lint:fix": "n8n-node lint --fix",
+    "prepublishOnly": "npm run build"
   }
 }
