Add versioning support for forms and implement version history functionality
- Introduced a new `Version` model to handle versioning of form data, utilizing the `mpociot/versionable` package for version management.
- Created `VersionController` to manage version retrieval and restoration, allowing users to view and revert to previous versions of forms.
- Added `VersionResource` for formatting version data in API responses.
- Implemented a migration to create the `versions` table for storing version records.
- Updated the `Form` model to support versioning, including configuration for version retention and fields to ignore during versioning.
- Developed a `FormHistory` component in the client to display and manage form version history, enhancing user experience with version control features.
- Updated API routes to include endpoints for version operations, ensuring seamless integration with the frontend.

--- a/api/composer.json
+++ b/api/composer.json
@@ -32,6 +32,7 @@
         "laravel/vapor-core": "*",
         "league/flysystem-aws-s3-v3": "*",
         "maatwebsite/excel": "^3.1",
+        "mpociot/versionable": "^4.4",
         "openai-php/client": "*",
         "propaganistas/laravel-disposable-email": "*",
         "sabberworm/php-css-parser": "^9.1",
