Update repository links in documentation and configuration files to reflect new GitHub organization
- Changed all instances of the old GitHub repository URL from 'JhumanJ/OpnForm' to 'OpnForm/OpnForm' across README, API configuration, client configuration, and documentation files.
- Ensured consistency in links for help, discussions, and cloning instructions to improve user experience and accessibility.

--- a/integrations/n8n/package.json
+++ b/integrations/n8n/package.json
@@ -17,11 +17,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jhumanj/opnform.git",
+    "url": "git+https://github.com/OpnForm/OpnForm.git",
     "directory": "integrations/n8n"
   },
   "bugs": {
-    "url": "https://github.com/jhumanj/opnform/issues"
+    "url": "https://github.com/OpnForm/OpnForm/issues"
   },
   "main": "dist/index.js",
   "files": [
