Update repository links in documentation and configuration files to reflect new GitHub organization
- Changed all instances of the old GitHub repository URL from 'JhumanJ/OpnForm' to 'OpnForm/OpnForm' across README, API configuration, client configuration, and documentation files.
- Ensured consistency in links for help, discussions, and cloning instructions to improve user experience and accessibility.

--- a/api/composer.json
+++ b/api/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jhumanj/opnform",
+    "name": "opnform/opnform",
     "description": "A beautiful open-source form builder ",
     "keywords": [
       "form",
