Add dev-only packages to dont-discover to fix Vapor deployment

--- a/api/composer.json
+++ b/api/composer.json
@@ -72,7 +72,13 @@
       "extra": {
         "laravel": {
           "dont-discover": [
-            "laravel/dusk"
+            "laravel/dusk",
+            "nunomaduro/collision",
+            "pestphp/pest-plugin-laravel",
+            "spatie/laravel-ignition",
+            "barryvdh/laravel-ide-helper",
+            "laravel/pint",
+            "laravel/sail"
           ]
         },
         "google/apiclient-services": [
