Add two-factor authentication support
- Integrated the `laragear/two-factor` package for enhanced security.
- Updated `LoginController` and `SsoController` to handle 2FA checks and responses.
- Refactored `ManagesJWT` trait to centralize 2FA and blocked user logic in authentication responses.
- Added new routes for enabling, confirming, and disabling two-factor authentication.
- Enhanced client-side components to support 2FA verification and user experience improvements.
- Updated tests to validate 2FA functionality and ensure proper error handling for blocked users.

--- a/api/composer.json
+++ b/api/composer.json
@@ -21,6 +21,7 @@
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "*",
         "jolicode/slack-php-api": "^4.8",
+        "laragear/two-factor": "^3.0",
         "laravel/cashier": "*",
         "laravel/framework": "^11.9",
         "laravel/horizon": "*",
